--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "glsl-quasiquote"
 version = "0.1.0"
+license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "The glsl! procedural macro, providing quasiquoting of the glsl crate."
 keywords = ["GLSL", "OpenGL", "SPIR-V", "parser", "proc-macro"]
