--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "The glsl! procedural macro, providing quasiquoting of the glsl crate."
 keywords = ["GLSL", "OpenGL", "SPIR-V", "parser", "proc-macro"]
-categories = ["parsing", "rendering", "quasiquoting"]
+categories = ["parsing", "rendering"]
 homepage = "https://github.com/phaazon/glsl-quasiquote"
 repository = "https://github.com/phaazon/glsl-quasiquote"
 documentation = "https://docs.rs/glsl-quasiquote"
